# SayWare

./: .env.template  .gitignore  .markdownlint-cli2.yaml  .yamllint.yaml  AUTHORS.md  Cargo.toml  Containerfile  README.md  deny.toml  malware.toml  repository.toml  rust-toolchain.toml  rustfmt.toml
.forgejo/workflows/: builder.yaml  malware.yaml  server.yaml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  build.yaml  format.yaml  lint.yaml
assets/images/: logo.svg.license
configurations/client-side/: malware-ui.schema.json  malware-ui.schema.json.license  malware.schema.json  server-ui.schema.json  server.schema.json
configurations/outputs/: instance-ui.schema.json  victims-ui.schema.json  victims.schema.json
configurations/server-side/: malware.toml  server.toml
configurations/states/: instance.schema.json
malware/: Cargo.toml  build.rs
malware/src/: main.rs  server.rs
server/: Cargo.toml
server/src/: api.rs  main.rs
server/src/api/: routes.rs
server/src/api/routes/: exfiltration.rs  sentence.rs
types/: Cargo.toml
types/src/: lib.rs
