# SPDX-FileCopyrightText: 2025 The SayWare development team
#
# SPDX-License-Identifier: CC0-1.0

cargo-features = ["profile-rustflags"]

[workspace]
resolver = "3"
members = ["malware", "server"]

[profile.small-size]
inherits = "release"
strip = true
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
rustflags = ["-Zlocation-detail=none", "-Zfmt-debug=none"]
