# SPDX-FileCopyrightText: 2025 The SayWare development team
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "sayware-server"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3.1.11" }
poem-openapi = { version = "5.1.15" }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
