# SPDX-FileCopyrightText: 2025 The SayWare development team
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "sayware-server"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
poem = { version = "3.1.11" }
poem-openapi = { version = "5.1.15" }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
config = { version = "0.15.11" }
anyhow = { version = "1.0.98" }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
