# SPDX-FileCopyrightText: 2025 The SayWare development team
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "sayware-server"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "sayware-server"
path = "./src/main.rs"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
poem = { version = "3.1.12", default-features = false, features = ["rustls"] }
poem-openapi = { version = "5.1.16" }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
config = { version = "0.15.18" }
anyhow = { version = "1.0.100" }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
sayware-types = { path = "../types" }
