# SPDX-FileCopyrightText: 2025 The SayWare development team
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "sayware-types"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "sayware_types"
path = "./src/lib.rs"

[dependencies]
poem-openapi = { version = "5.1.15" }
serde = { version = "1.0.219", features = ["derive"] }
